Сверстать страницу furniture

--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -14,6 +14,7 @@
 		padding 35px 80px 10px 90px
 	&__logo
 		margin-right 90px
+		display block
 	&__search-form
 		margin-left auto
 		padding-top 20px
