--- a/app/blocks/menu/menu.styl
+++ b/app/blocks/menu/menu.styl
@@ -19,10 +19,10 @@
 			width 25px
 			height 15px
 			background-color #fff
-			background-image: url('../images/menu.png')
+			background-image url('../images/menu.png')
 			background-repeat no-repeat
 			background-position: top center;
-			transform: translateX(-50%);
+			transform: translateX(-50%)
 			z-index 10
 		&:hover::before
 			display block
@@ -46,7 +46,7 @@
 		bottom -25px
 		left 0
 		width 600px
-		background-color #fff;
+		background-color #fff
 	&__sub-item
 		margin-right 20px
 	&__sub-link
