--- a/app/blocks/content/content.styl
+++ b/app/blocks/content/content.styl
@@ -28,6 +28,7 @@
 		text-decoration none
 		border 1px solid #fff
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6)
+		cursor pointer
 		&:hover
 			opacity 0.6
 		&::after
