--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -4,7 +4,7 @@ include ../icon/icon
 mixin header()
 	+b.header&attributes(attributes)
 		+e.container.container
-			+e.logo
+			+e('a').logo(href="index.html")
 				+e('img').logo-image(src="/assets/images/logo.png" width="187" height="53")
 			+menu(getData('menu'))
 			+e('form').search-form(action='' method='post')
