--- a/app/blocks/gallery/gallery.jade
+++ b/app/blocks/gallery/gallery.jade
@@ -1,10 +1,12 @@
 mixin gallery(data)
 	+b.gallery&attributes(attributes)
-		each image in data
+		each container in data
 			+e.item
-				+e.image(src=image.file width=image.width height=image.height)
-				if image.popup
-					+e.popup
-						+e.popup-title= image.popup.title
-						+e.popup-text= image.popup.text
+				each image in container
+					+e.item-inner
+						+e.image(src=image.file width=image.width height=image.height)
+						if image.popup
+							+e.popup
+								+e.popup-title= image.popup.title
+								+e.popup-text= image.popup.text
 		+e.button Посмотреть далее
