--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -9,6 +9,7 @@
 		width 100%
 		height 2px
 		background-color fontGrey
+		z-index -1
 	&__container
 		display flex
 		padding 35px 80px 10px 90px
@@ -23,6 +24,7 @@
 		margin-right 10px
 		height 37px
 		font-size 12px
+		font-family fontDisplay
 		text-transform uppercase
 		text-align right
 		border none
