--- a/app/blocks/furniture/furniture.styl
+++ b/app/blocks/furniture/furniture.styl
@@ -12,13 +12,23 @@
 		font-size 26px
 		text-transform uppercase
 	&__description
-		width (625/1600*100)%
+		flex-grow 1
+		padding-right (75/1600*100)%
+		overflow auto
 	&__text
 		margin-bottom 30px
 		color fontParagraph
 		font-size 18px
+		font-family fontDisplay
 		line-height 1.3
 		&:first-of-type
 			margin-top 50px
 		&:last-child
 			margin-bottom 0
+	&__print
+		position relative
+		top 17px
+		display inline-block
+	&__print-icon
+		width 55px
+		height 50px
