--- a/app/styles/helpers/fonts.styl
+++ b/app/styles/helpers/fonts.styl
@@ -5,6 +5,12 @@
   src url('../fonts/SF-UI-Display-Light.ttf') format("ttf")
 
 @font-face
+  font-family 'SF UI Display'
+  font-style normal
+  font-weight 700
+  src url('../fonts/SF-UI-Display-Bold.ttf') format("ttf")
+
+@font-face
   font-family 'SF UI Text'
   font-style normal
   font-weight 300
