--- a/app/blocks/request/request.jade
+++ b/app/blocks/request/request.jade
@@ -3,4 +3,9 @@ mixin request(data)
 		+e('a').button=	data.label
 		+e.modal
 			+e('form').modal-window(action="#" method="post")
+				+e('h3').modal-title= data.modal.title
+				each input in data.modal.fields
+					+e('input').field(type="text" placeholder=input.label name=input.name required=input.required)
+				+e('button').submit(type="submit")= data.label
+				+e('button').close(type="button")
 
