--- a/app/blocks/furniture/furniture.styl
+++ b/app/blocks/furniture/furniture.styl
@@ -14,17 +14,23 @@
 	&__description
 		flex-grow 1
 		padding-right (75/1600*100)%
+		color fontParagraph
+		font-family fontDisplay
 		overflow auto
+	&__subtitle
+		margin 60px 0 25px
+		font-size 36px
+		text-transform uppercase
 	&__text
 		margin-bottom 30px
-		color fontParagraph
 		font-size 18px
-		font-family fontDisplay
 		line-height 1.3
 		&:first-of-type
 			margin-top 50px
 		&:last-child
 			margin-bottom 0
+	&__subtitle + &__text
+		margin 0
 	&__print
 		position relative
 		top 17px
