--- a/app/blocks/gallery/gallery.styl
+++ b/app/blocks/gallery/gallery.styl
@@ -5,7 +5,8 @@
 	height 700px
 	&--furniture
 		width 890px
-	&--flooring
+	&--flooring,
+	&--about
 		width 850px
 	&--product
 		width 845px
@@ -14,7 +15,6 @@
 		flex-direction column
 		justify-content space-between
 		margin-right 4px
-		width 345px
 		height 700px
 	&--product &__item
 		flex-direction row
@@ -53,7 +53,8 @@
 		background-color rgba(0, 0, 0, 0.5)
 		transform translateY(-50%)
 		cursor pointer
-	&--product &__button
+	&--product &__button,
+	&--about &__button
 		display none
 		&:hover
 			opacity 0.6
