--- a/app/blocks/furniture/furniture.styl
+++ b/app/blocks/furniture/furniture.styl
@@ -38,3 +38,43 @@
 	&__print-icon
 		width 55px
 		height 50px
+	&__modal-window
+		display none
+		position fixed
+		top 0
+		left 0
+		width 100%
+		height 100%
+		background-color rgba(63, 67, 65, 0.8)
+		z-index 1000
+	&__modal-image
+		position fixed
+		top 50%
+		left 50%
+		padding 20px 40px
+		width 1190px
+		height 660px
+		background-image url('../images/about_modal.jpg')
+		background-repeat no-repeat
+		background-size cover
+		transform translate(-50%, -50%)
+		z-index 2000
+	&__modal-close
+		position absolute
+		top -12px
+		right -12px
+		width 25px
+		height 25px
+		background-color #fff
+		border none
+		&::before, &::after
+			position absolute
+			content ""
+			top 11px
+			left 2px
+			width 20px
+			height 2px
+			background-color fontParagraph
+			transform rotate(55deg)
+		&::after
+			transform rotate(-60deg)
