--- a/app/blocks/furniture/furniture.styl
+++ b/app/blocks/furniture/furniture.styl
@@ -2,11 +2,12 @@
 	display block
 	padding-top 115px
 	&__container
-		padding-left (80/1600*100)%
+		padding 0 0 20px (80/1600*100)%
 		display flex
 		justify-content space-between
 		min-height 690px
 		background-image url('../images/bg_furniture.jpg')
+		background-size cover
 	&__title
 		margin-bottom 10px
 		font-size 26px
