--- a/app/blocks/container/container.styl
+++ b/app/blocks/container/container.styl
@@ -2,3 +2,7 @@
 	margin 0 auto
 	max-width 1600px
 	min-width 1250px
+	&--main
+		min-height 690px
+		background-image url('../images/bg_furniture.jpg')
+		background-size cover
