--- a/app/blocks/menu/menu.styl
+++ b/app/blocks/menu/menu.styl
@@ -12,48 +12,48 @@
 			margin-right 0
 		&::before
 			position absolute
-			display none
-			content ""
-			bottom 2px
+			z-index 10
 			left 50%
+			bottom 2px
+			display none
 			width 25px
 			height 15px
+			content ''
 			background-color #fff
 			background-image url('../images/menu.png')
 			background-repeat no-repeat
-			background-position: top center;
-			transform: translateX(-50%)
-			z-index 10
+			background-position top center
+			transform translateX(-50%)
 		&:hover::before
 			display block
 		&:hover .menu__sub-container
 			display flex
 	&__link
-		color fontGrey
 		font-size 13px
 		text-transform uppercase
 		text-decoration none
 		cursor pointer
+		color fontGrey
 		&:hover
 			color fontBlack
 		&--active
 			color fontBlack
 	&__sub-container
 		position absolute
+		padding-top 19px
 		display none
 		flex-wrap wrap
-		padding-top 19px
-		bottom -25px
 		left 0
+		bottom -25px
 		width 600px
 		background-color #fff
 	&__sub-item
 		margin-right 20px
 	&__sub-link
-		color fontGrey
 		font-size 13px
 		text-transform uppercase
 		text-decoration none
+		color fontGrey
 		&:hover
 			color fontBlack
 
