--- a/app/blocks/breadcrumbs/breadcrumbs.styl
+++ b/app/blocks/breadcrumbs/breadcrumbs.styl
@@ -1,18 +1,18 @@
 .breadcrumbs
 	display flex
-	color #b6b7b9
 	font-size 10px
+	color #b6b7b9
 	&__item
 		position relative
 		padding-right 10px
 	&__link
-		color #b6b7b9
 		text-transform none
 		text-decoration none
+		color #b6b7b9
 		&[href]::after
 			position absolute
-			content " / "
 			top 0
 			right -4px
 			width 10px
 			height 10px
+			content ' / '
