--- a/app/blocks/content/content.styl
+++ b/app/blocks/content/content.styl
@@ -6,16 +6,16 @@
 		min-height 827px
 		background-image url('../images/bg_index.jpg')
 		background-repeat no-repeat
-		background-size cover
 		background-position center top
+		background-size cover
 	&__title
 		margin 0 0 115px
 		padding 0
 		font-size 60px
-		color #fff
-		text-transform uppercase
-		text-align center
 		line-height 1.3
+		text-align center
+		text-transform uppercase
+		color #fff
 	&__button
 		position relative
 		margin 0 auto
@@ -23,21 +23,21 @@
 		display block
 		width 265px
 		font-size 16px
-		color #fff
 		text-align center
 		text-decoration none
-		border 1px solid #fff
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6)
 		cursor pointer
+		color #fff
+		border 1px solid #fff
+		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .6)
 		&:hover
-			opacity 0.6
+			opacity .6
 		&::after
 			position absolute
-			content ""
 			top 13px
 			right 35px
 			width 10px
 			height 20px
+			content ''
 			background-image url('../images/arrow_right.png')
 			background-repeat no-repeat
 			background-size cover
