--- a/app/blocks/filter/filter.styl
+++ b/app/blocks/filter/filter.styl
@@ -2,9 +2,9 @@
 	display block
 	&__title
 		margin-bottom 15px
-		color fontParagraph
-		font-size 18px
 		font-family fontDisplay
+		font-size 18px
+		color fontParagraph
 	&__container
 		display flex
 		justify-content space-between
@@ -20,10 +20,10 @@
 			display block
 	&__item-label
 		position absolute
-		bottom 0
 		left 0
+		bottom 0
 		padding-left 10px
 		width 100%
-		color: #fff
 		line-height 25px
-		background-color rgba(0, 0, 0, 0.5)
+		color #fff
+		background-color rgba(0, 0, 0, .5)
