--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -3,16 +3,16 @@
 	display block
 	&::after
 		position absolute
-		content ""
-		bottom 20px
+		z-index -1
 		left 0
+		bottom 20px
 		width 100%
 		height 2px
+		content ''
 		background-color fontGrey
-		z-index -1
 	&__container
-		display flex
 		padding 35px 80px 10px 90px
+		display flex
 	&__logo
 		margin-right 90px
 		display block
@@ -23,8 +23,8 @@
 	&__search-input
 		margin-right 10px
 		height 37px
-		font-size 12px
 		font-family fontDisplay
+		font-size 12px
 		text-transform uppercase
 		text-align right
 		border none
