--- a/app/blocks/modal/modal.styl
+++ b/app/blocks/modal/modal.styl
@@ -1,15 +1,15 @@
 .modal
 	position fixed
+	z-index 10
 	top 50%
 	left 50%
-	display none
 	padding 20px
+	display none
 	width 550px
-	color fontParagraph
-	font-size 14px
 	font-family fontDisplay
+	font-size 14px
+	color fontParagraph
 	background-color #fff
-	z-index 10
 	transform translate(-50%, -50%)
 	&__close
 		position absolute
@@ -21,11 +21,11 @@
 		border none
 		&::before, &::after
 			position absolute
-			content ""
 			top 11px
 			left 2px
 			width 20px
 			height 2px
+			content ''
 			background-color #fff
 			transform rotate(55deg)
 		&::after
