--- a/app/blocks/socials/socials.styl
+++ b/app/blocks/socials/socials.styl
@@ -1,7 +1,7 @@
 .socials
+	margin-left 65px
 	display flex
 	justify-content flex-end
-	margin-left 65px
 	&__item
 		display flex
 		justify-content center
@@ -15,7 +15,7 @@
 		&:nth-child(3)
 			background-color #4f5766
 		&:hover .socials__icon
-			opacity 0.5
+			opacity .5
 	&__icon
 		fill #fff
 		&--vk
